--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,16 @@
         android:id="@+id/btnNewGame"
         android:padding="10dp"
         android:textSize="50dp"/>
-
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Quay lại"
+            android:id="@+id/btnUndo"/>
+    </LinearLayout>
     <com.example.caro.Chessboard
         android:id="@+id/chessboard"
         android:layout_width="match_parent"
